iho2 update shewithamask

--- a/_layouts/ishalvingover.html
+++ b/_layouts/ishalvingover.html
@@ -15,4 +15,18 @@ layout: post
 		text-align: left;
 		text-indent: 0.25em;
 	}
+
+	.iho-name-span {
+		font-size: 90%;
+		font-weight: bold;
+		font-variant: small-caps;
+	}
+
+	.text-align-center {
+		text-align: center;
+	}
+
+	.asterism {
+		padding-top: 20%;
+	}
 </style>
